KubernetesConfig/base/application/API-Gateway.yml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: application-gateway
  namespace: public-gateway
spec:
  gatewayClassName: traefik     # Tells Traefik to provision this infrastructure
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Selector # Selector (only the matching a label selector).
          selector:
            matchLabels:
              app.kubernetes.io/name: wed-studiozs
