KubernetesConfig/base/application/HTTPRoute.yml
apiVersion:  gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: wed-studiozs
  namespace: public-gateway
spec:
  parentRefs:
    - name: application-gateway
      namespace: public-gateway
  hostnames:
    - "wedstudiozs.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: wed-studiozs-service
          namespace: wed-studiozs
          port: 8000
