KubernetesConfig/base/application/allow-traffic-policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-dns-traffic
  namespace: wed-studiozs
spec:
  podSelector:
    matchLabels:
      app: wed-studiozs-app              # Apply to pods with label wed-studiozs-app
  policyTypes:
    - Ingress
    - Egress
  
  # Allow incoming traffic from the Traefik gateway to the application pods
  ingress:
    - from:
        - namespaceSelector: {}        # Allow traffic from any namespace since trefik is in a different namespace
          podSelector:
            matchLabels:
              # Allow traffic from pods with label traefik
              gateway.networking.k8s.io/gateway-name: application-gateway
          ports:
          - protocol: TCP
            port: 8000   # The port that the service will expose to other services within the cluster

  # Allow application to communicate with cluster DNS to resolve service names
  egress:
    - to:
        - namespaceSelector: {}       # Allow traffic to any namespace since DNS is in a different namespace
          podSelector:
            matchLabels:
              k8s-app: kube-dns        # Allow traffic to pods with label k8s-app=kube-dns (the DNS service)
          ports:
          - protocol: UDP
            port: 53     # The port that the DNS service listens on for queries
          - protocol: TCP
            port: 53     # The port that the DNS service listens on for queries

    # Allow application to communicate with the PostgreSQL database service
    - to:
        - namespaceSelector:
            matchLabels:
              name: wed-studiozs        # Allow traffic to the wed-studiozs namespace PostgreSQL service
          ports:
          - protocol: TCP
            port: 5432   # The port that the PostgreSQL service listens on for connections
